# ChessApp

./: .gitignore  CMakeLists.txt  Chess.sln  README.md
Chess/: Chess.vcxproj  Chess.vcxproj.filters  Drawer.cpp  Drawer.h  Figure.cpp  Figure.h  Game.cpp  Game.h  LastGame.txt  Map.cpp  Map.h  MapProperties.cpp  MapProperties.h  Menu.cpp  Menu.h  MoveInfo.cpp  MoveInfo.h  Notes.txt  Player.cpp  Player.h  PlayerWithAIGame.cpp  PlayerWithAIGame.h  Pos.cpp  Pos.h  Resources.h  Targets.txt  TwoPlayersGame.cpp  TwoPlayersGame.h  form.txt  main.cpp
ChessEngine/: ChessEngine.vcxproj  ChessEngine.vcxproj.filters  Figure.cpp  Figure.h  Map.cpp  Map.h  MoveInfo.cpp  MoveInfo.h  Pos.cpp
Release/: Chess.iobj  Chess.ipdb  ChessEngine.exp  ChessEngine.iobj  ChessEngine.ipdb  ChessEngine.lib
res/: form.txt
src/Chess/: Drawer.cpp  Drawer.h  Game.cpp  Game.h  MapProperties.cpp  MapProperties.h  Menu.cpp  Menu.h  Player.cpp  Player.h  PlayerWithAIGame.cpp  PlayerWithAIGame.h  Resources.h  SideMenu.cpp  SideMenu.h  TwoPlayersGame.cpp  TwoPlayersGame.h  main.cpp  meta-inf.h
src/ChessEngine/: ChessEngine.h  Figure.cpp  Figure.h  Map.cpp  Map.h  MoveInfo.cpp  MoveInfo.h  Pos.cpp  Pos.h  pch.h
tests/EngineTests/: LaunchTesting.cpp  UnitTesting.cpp  test.cpp
